--- a/tidycensus_test.Rmd
+++ b/tidycensus_test.Rmd
@@ -219,6 +219,10 @@ mn_2019_census_nogeom
 colSums(is.na(mn_2019_census_nogeom))
 ```
 
+```{r}
+write.csv(act_clean, "act_clean.csv")
+write.csv(mn_2019_census_nogeom, "mn_2019_census.csv")
+```
 
 
 
