--- a/behind_the_scenes.Rmd
+++ b/behind_the_scenes.Rmd
@@ -5,37 +5,51 @@ date: "5/05/2021"
 output: html_document
 ---
 
-(some of this stuff can be put into our final project document when we are ready)
-
 # Introduction
 
-Computer Science is a field that is growing rapidly in the United States today. Even at Macalester, it is one of the largest departments in terms of how many people choose to major in it. Offering computer science courses in elementary and secondary schools provides an opportunity for kids to expose themselves to coding, potentially causing them to discover interests and feel more empowered before entering the workforce or higher education. For our Advanced Data Science final project, we decided to explore the availability of computer science courses in Minnesotan school districts. [a brief sentence about our findings]
+Computer Science is a field that is growing rapidly in the United States and around the world today. Advancements in computer science from industry are constantly being released and technology is becoming more ingrained into our daily lives. The increasing demand of computer scientists had caused the occupation to grow in popularity. To meet the demand, educational institutions and systems are increasing the amount of courses offered in order to train more future computer scientists. This development started at the college level, where majoring in computer science is becoming a widely available option. At Macalester College, it is one of the largest departments for both students and faculty. While the availability of courses at the college level is an amazing start, there is a big push to have computer sciences courses offered in K-12 education. Offering computer science courses in elementary and secondary schools provides an opportunity for kids to expose themselves to coding. This could lead younger students to discover new interests and get engaged with computer science earlier. Often, being exposed to computer science at a younger age can make students more comfortable with the material and the field later on. This can lead to a more empowered and diverse set of students entering the workforce or higher education. Given the importance of having computer science courses available in K-12 education, we decided to explore the availability of computer science courses in K-12 school districts in Minnesota. For our Advanced Data Science final project, we will explore the connection between a variety of datasets relate to this topic, including K-12 computer science course availability in Minnesota, demographic information from the U.S. census, and ACT scores.
+
+[a brief sentence about our findings]
 
 
 # About the Datasets
 
 **Minnesota Common Course Catalogue**
 
-This data set is provided by the Minnesota State Department of Education and is available to the public. The MCCC presents information about all the courses that are offered across school districts in Minnesota. For our purposes, we are looking at subject area 10, computer and information sciences (K-12), and all categories and classifications. For each course classification, there is information about the district where it is taught, the region of the state, the local course title, whether it is an AP or IB course, if it fulfills a graduation requirement, among others. We joined this dataset with information about what category the course classification falls into, such as A - computer literacy, B - management information systems, or C - network systems. The final dataset has 1,602 computer and information classes taught across the state in K-12 education.
+This data set is provided by the Minnesota State Department of Education and is available to the public. The Minnesota Common Course Catalogue (MCCC) presents information about all the courses that are offered across school districts in Minnesota. For our purposes, we are looking at subject area 10, computer and information sciences (K-12), and all categories and classifications. For each course classification, there is information about the district where it is taught, the region of the state, the local course title, whether it is an AP or IB course, if it fulfills a graduation requirement, among others. We joined this dataset with information about what category the course classification falls into, such as A - computer literacy, B - management information systems, or C - network systems. The final dataset has 1,602 computer and information classes taught across the state in K-12 education.
 
 Link: https://public.education.mn.gov/MDEAnalytics/DataTopic.jsp?TOPICID=84
 
-**ACT Data**
-
-We retrieved these data from ____, which gives us average composite ACT scores for each school district in Minnesota. We thought these scores may be an interesting variable in predicting or visualizing availability of computer science courses by district.
 
 **American Community Survey**
 
-We accessed the 2019 American Community Survey (ACS) from the tidycensus package in R. The ACS is an annual demographic survey from the U.S. Census Bureau. We used this data set to find by-district information about race, socioeconomic status, living environments, and other relevant variables for our analyses and visualizations.
+We accessed the 2019 American Community Survey (ACS) from the tidycensus package in R. The ACS is an annual demographic survey from the U.S. Census Bureau. We used this data set to find by-district information about race, socioeconomic status, living environments, and other relevant variables for our analyses and visualizations. We hypothesized that computer science course availability would be connected to one or more of these variables, due to the trend where more computer science courses are offered in wealthier areas across the country that have more resources. We are using this dataset to further investigate that possibility.
 
-**District Numbers**
 
-This data set includes the name of all school districts in Minnesota as well as their district numbers. We joined the district numbers from this data set to the American Community Survey Data, which only had the district names.
+**ACT Data**
+
+We retrieved this data from the Minnesota State Department of Education, which gives us average composite ACT scores for each school district in Minnesota for a range of years. It has been proven that higher ACT scores are connected to wealth, which would lead us to expect that districts with more resources would have higher average ACT scores. As aforementioned, we predict that computer science course availability is greater in areas with more wealth and resources, therefore we thought these scores may be another interesting variable in predicting or visualizing availability of computer science courses by district. In the same way we expect certain demographic information to be correlated with computer science availability, we are hoping to use average ACT score information to present another method of showing the connection.
+
+Link: https://public.education.mn.gov/MDEAnalytics/DataTopic.jsp?TOPICID=87
+
+
+**Annual Survey of School System Finances**
+
+Another important set of data that we used from the U.S. Census Bureau is the Annual Survey of School System Finances (ASSSF). This data contains information about 2018 financial activity of public elementary and secondary school systems for all states across the country. In particular, we were interested in discovering if funding, revenue, or spending for a district was correlated to availability of computer science courses. Due to the fact that public school funding often comes from income taxes, wealthier areas provide more funding to for their local schools.
+
+Link: https://www.census.gov/programs-surveys/school-finances.html
+
+**Minnesota School Districts**
+
+This data set includes the name of all school districts in Minnesota as well as their district numbers, which was created in 2015. This data came from the Minnesota State Department of Human Services. We joined the district numbers from this data set to the American Community Survey Data, which only had the district names. Accessing district numbers and names was integral in connecting our various datasets, because the common piece of information between our ideas is district information.
+
+Link: https://www.dhs.state.mn.us/main/groups/county_access/documents/pub/dhs16_193591.pdf
 
 
 #Important Packages and Datasets
 
 ## Load Packages
+
 ```{r}
 library(tidycensus) # for getting the census data
 library(tidyverse) # for data cleaning and visualization
@@ -43,42 +57,36 @@ library(sf) # for mapping
 ```
 
 ## Load Datasets
+
 ```{r}
-act <- read_csv("act_data.csv") # ACT scores
-districts <- read_csv("districts.csv") # District numbers
+act <- read_csv("act_data.csv") # ACT
+districts <- read_csv("districts.csv") # MN School Districts
 course_catalog <- read_csv("course_catalog.csv") # MCCC
+ss <- readxl::read_excel("elsec18t.xls") # ASSSF
 ```
+
 
 # Data Cleaning
 
-**ACT Data**
+**MCCC Data**
+
+The data from the Department of Education was neatly split into spreadsheets based on course classifications. In order to use this data more easily, we manually combined all the spreadsheets to have one, connected dataset with all the courses offered. We had to manually add in the categories of course classification and category in order to create one dataset. Furthermore, in order to be able to connect to the other datasets, we needed to have the district number as its own variable. In this dataset, the district name and number were combined as one variable, so we used regular expressions to split the name and number. This was fairly simple, due to the consistency in the district variable having the number as the last 7 digits.
+
 ```{r}
-# act_clean <-
-# act %>%
-#   filter(`Grad Year` == 2018,
-#          `Analysis Level` == "District",
-#          `District Name` != "MINNESOTA DEPT OF EDUCATION",
-#          `Avg Comp` != ".") %>%
-#   select(`District Name`, `Avg Comp`) %>%
-#   mutate(`Dist Num` = as.integer(str_extract_all(`District Name`, "[:digit:]+"))) %>%
-#   mutate(`Dist Num`= replace(`Dist Num`, `District Name`=="GRANADA-HUNTLEY-EAST CHAIN SD", 2536),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="ALBERT LEA AREA SCHOOLS", 241),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="ATWATER-COSMOS-GROVE CITY SD", 2396),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="BOLD SCHOOL DISTRICT", 2534),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="BUFFALO HANOVER MONTROSE SD", 0877),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="BUFFALO LAKE-HECTOR-STEWART SD", 2159),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="EASTERN CARVER CO SCHOOLS", 112),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="MANKATO AREA PUBLIC SCHS", 77),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="MINNEAPOLIS PUBLIC SCH DIST", 9991),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="MINNEOTA PUBLIC SCHOOLS", 414),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="PLAINVIEW ELGIN MILLVILLE SD", 2899),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="ROYALTON PUBLIC SCHOOLS", 485),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="WASECA PUBLIC SCHOOL DIST", 829),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="WAUBUN-OGEMA-WHITE EARTH PSD", 435),
-#          `Dist Num`= replace(`Dist Num`, `District Name`=="WINONA AREA PUBLIC SCHOOL DIST", 861))
+# course_catalog_predictors <-
+# course_catalog %>% 
+#   mutate(DistNum = as.integer(str_sub(`District`, -7,-4))) %>% 
+#   group_by(DistNum) %>% 
+#   summarise(TotalClasses = sum(n()),
+#             NumCat = length(unique(Category)))
 ```
 
+
+
 **ACS Data**
+
+The ACS data was already in tidy format, which was convenient for our purposes. We focused on narrowing down variables to the ones that were important to our project and renaming them so that we could easily understand the meaning of the variable. Many of the districts had the word 'Minnesota' in it, so we removed that because all of our data is about Minnesota. Lastly, we altered the dataset to remove any NA values.
+
 ```{r}
 # mn_2019_census <- get_acs(state = "MN", 
 #                          geography = "school district (unified)",
@@ -131,10 +139,81 @@ course_catalog <- read_csv("course_catalog.csv") # MCCC
 ```
 
 
-# Visualization and Mapping
+**ACT Data**
+
+To begin with, this dataset included a range of years, so we filtered the graduation year to our year of interest, which was 2018. This dataset also originally had extra variables that were irrelevant to our interests, so our cleaning process involved removing predictors so that we were only left with district name and average composite ACT score. The district name included the district number, so to create two separate values we used regular expressions. The district number was consistently located at the same spot in the name.
+
+```{r}
+# act_clean <-
+# act %>%
+#   filter(`Grad Year` == 2018,
+#          `Analysis Level` == "District",
+#          `District Name` != "MINNESOTA DEPT OF EDUCATION",
+#          `Avg Comp` != ".") %>%
+#   select(`District Name`, `Avg Comp`) %>%
+#   mutate(`Dist Num` = as.integer(str_extract_all(`District Name`, "[:digit:]+"))) %>%
+#   mutate(`Dist Num`= replace(`Dist Num`, `District Name`=="GRANADA-HUNTLEY-EAST CHAIN SD", 2536),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="ALBERT LEA AREA SCHOOLS", 241),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="ATWATER-COSMOS-GROVE CITY SD", 2396),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="BOLD SCHOOL DISTRICT", 2534),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="BUFFALO HANOVER MONTROSE SD", 0877),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="BUFFALO LAKE-HECTOR-STEWART SD", 2159),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="EASTERN CARVER CO SCHOOLS", 112),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="MANKATO AREA PUBLIC SCHS", 77),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="MINNEAPOLIS PUBLIC SCH DIST", 9991),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="MINNEOTA PUBLIC SCHOOLS", 414),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="PLAINVIEW ELGIN MILLVILLE SD", 2899),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="ROYALTON PUBLIC SCHOOLS", 485),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="WASECA PUBLIC SCHOOL DIST", 829),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="WAUBUN-OGEMA-WHITE EARTH PSD", 435),
+#          `Dist Num`= replace(`Dist Num`, `District Name`=="WINONA AREA PUBLIC SCHOOL DIST", 861))
+```
+
+
+**Annual Survey of School System Finances**
+
+Originally, this dataset includes information about all the states. Part of cleaning was filtering for just the state of Minnesota, since that is our target region.
+
+```{r}
+# ss %>%
+#   # filter for MN 
+#   filter(str_detect(NCESID, "^27")) %>%
+#   arrange(NCESID) %>%
+#   head(10) %>%
+#   select(NCESID)
+```
+
+
+**Minnesota School Districts**
+
+This dataset originally had four categories, district name, district number, start date, and end date. To prepare this dataset we removed the start and end date variables. In order to join it with the ACS dataset, we had to compare the district names in both to ensure that they aligned. Only 16 district names didn't match, which was a small number, so we manually changed the district names to match the names in the ACS dataset.
+
+
+# Data Joining
+
+Part of the work we did after finding, importing, and cleaning our various datasets was joining them together. An important piece for this was ensuring the district names and numbers aligned, and most of that was completed in the previous step. Here is our code for joining the datasets:
+
+```{r}
+
+```
+
+
+# Mapping and Shape Files
+
+While we had all the data necessary to create useful graphs and tables, one of our goals was to create visualizations and maps. Our data is focused on the state of Minnesota and all of it segmented by school districts, therefore we believed an interesting and informative way to present this data is with maps. The piece that was missing for us to accomplish this were the shape files for the districts. Shape files are notoriously tricky, and implementing this was a challenge.
+
+- why a challenge?
+
+# Visualizations and Plotly
+
+Although we knew our maps were sufficient, we wanted to add another element to our project. We decided to make the maps interactive and chose to use plotly to achieve this.
+
 
 # Modeling
 
+The goal of our model was to predict the number of computer science courses offered per district based on the variables from our ACS, ASSSF, and ACT data.
+
+
 # Challenges
 
-
+[Not sure if we need this category, but maybe we will want it!]
